transaction part done 'print, detail css'

--- a/templates/account/transaction_details.html
+++ b/templates/account/transaction_details.html
@@ -6,10 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'css/transaction_details.css' %}">
+    <script src="/static/js/jquery-2.2.4.min.js"></script>
+
 </head>
 <body>
     <div class="transaction_detail_wrapper">
-        <table>
+        <table id="print_section">
             <tr>
                 <td colspan="2" class="transaction_title">
                     거래명세서
@@ -76,15 +78,25 @@
                     거래일시
                 </td>
                 <td class="transaction_detail_content right">
-
+                    {{ order_item.order.timestamp }}
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
-                    hi
+                <td colspan="2" class="transaction_explanation_td">
+                    <span class="transaction_explanation">- 이 영수증은 세금계산서, 법적 증빙 등의 서류로 사용하실 수 없습니다.</span><br>
+                    <span class="transaction_explanation">- 소셜업은 공급자와 수요자의 중개 역할을 하는 사이트임을 알려드립니다.</span><br>
+                    <div class="transaction_detail_btns_wrapper">
+                        <button class="transaction_detail_btn print" onclick="print_transaction();">인쇄</button>
+                        <button class="transaction_detail_btn close">닫기</button>
+                    </div>
                 </td>
             </tr>
         </table>
     </div>
+    <script type="text/javascript">
+        function print_transaction(){
+            window.print();
+        }
+    </script>
 </body>
 </html>
