--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -825,7 +825,7 @@
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
                                     </ul>
                                     <div class="table_product btn detail" >
-                                        <button class="show_detail_btn second" aria-hidden="true">
+                                        <button class="show_detail_btn third" aria-hidden="true">
                                             <img src="/static/img/downward_arrow.png"/>
                                         </button>
                                     </div>
@@ -833,6 +833,97 @@
                                         <button class="review">
                                             서비스 평가
                                         </button>
+                                    </div>
+                                    <div class="review_modal">
+                                        <form class="review_form" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                                            <div class="review_form_title">
+                                                <span>서비스에 대해 평가해주세요!</span>
+                                            </div>
+                                            <div class="review_form_notice">
+                                                <span>
+                                                    평가 작성시 100포인트 적립
+                                                </span>
+                                            </div>
+                                            <input type="hidden" name="product_id" value="{{ order_item.cart_item.item.id }}">
+                                            <input type="hidden" name="is_review_upload" value="true"/>
+                                            <div class="review_form_content product">
+                                                <div class="review_form_content_title">
+                                                    구매 서비스
+                                                </div>
+                                                <div class="review_form_content_input">
+                                                    <span class="review_product_title">{{ order_item.cart_item.item.oneline_intro }}</span>
+                                                    <br>
+                                                    <div class="review_product_detail option">
+                                                        {% if order_item.cartitem.0.manuscript_checked or order_item.cartitem.0.haighrank_checked %}
+                                                        [옵션]
+                                                        {% if order_item.cartitem.0.item.manuscript_price != 0 %}
+                                                            원고추가 <span>{{ order_item.cartitem.0.item.manuscript_price }}원</span>
+                                                        {% endif %}
+
+                                                        {% if order_item.cartitem.0.item.highrank_price != 0 %}
+                                                            ,상위노출 <span>{{ order_item.cartitem.0.item.highrank_price }}원</span>
+                                                        {% endif %}
+                                                    {% else %}
+                                                        [옵션]없음
+                                                    {% endif %}
+                                                    </div>
+                                                    <div class="review_product_detail price">
+                                                        ￦ {{ order_item.line_item_total }}
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="review_form_content rating">
+                                                <div class="review_form_content_title">
+                                                    만족도 평가
+                                                </div>
+                                                <div class="review_form_content_input">
+                                                    <fieldset class="rating">
+                                                        <input type="radio" id="id_rating_10" name="rating" value="10" />
+                                                        <label class = "full" for="id_rating_10" title="Awesome - 5 stars"></label>
+                                                        <input type="radio" id="id_rating_9" name="rating" value="9" />
+                                                        <label class="half" for="id_rating_9" title="Pretty good - 4.5 stars"></label>
+                                                        <input type="radio" id="id_rating_8" name="rating" value="8" />
+                                                        <label class = "full" for="id_rating_8" title="Pretty good - 4 stars"></label>
+                                                        <input type="radio" id="id_rating_7" name="rating" value="7" />
+                                                        <label class="half" for="id_rating_7" title="Meh - 3.5 stars"></label>
+                                                        <input type="radio" id="id_rating_6" name="rating" value="6" />
+                                                        <label class = "full" for="id_rating_6" title="Meh - 3 stars"></label>
+                                                        <input type="radio" id="id_rating_5" name="rating" value="5" />
+                                                        <label class="half" for="id_rating_5" title="Kinda bad - 2.5 stars"></label>
+                                                        <input type="radio" id="id_rating_4" name="rating" value="4" />
+                                                        <label class = "full" for="id_rating_4" title="Kinda bad - 2 stars"></label>
+                                                        <input type="radio" id="id_rating_3" name="rating" value="3" />
+                                                        <label class="half" for="id_rating_3" title="Meh - 1.5 stars"></label>
+                                                        <input type="radio" id="id_rating_2" name="rating" value="2" />
+                                                        <label class = "full" for="id_rating_2" title="Sucks big time - 1 star"></label>
+                                                        <input type="radio" id="id_rating_1" name="rating" value="1" />
+                                                        <label class="half" for="id_rating_1" title="Sucks big time - 0.5 stars"></label>
+                                                    </fieldset>
+                                                    <div class="rating_notice">별을 클릭하여 서비스 만족도를 알려주세요.</div>
+                                                </div>
+                                            </div>
+                                            <div class="review_form_content satisfy" style="clear:both;">
+                                                <div class="review_form_content_title">
+                                                    세부 평가
+                                                </div>
+                                                <div class="review_form_content_input">
+                                                    <span class="satisfy_title_each">콘텐츠</span>{{ review_form.contents_satisfy }}<br>
+                                                    <span class="satisfy_title_each">광고효과</span>{{ review_form.ad_satisfy }}<br>
+                                                    <span class="satisfy_title_each">친절도</span>{{ review_form.kind_satisfy }}
+                                                </div>
+                                            </div>
+
+                                            <div class="review_form_content review" style="clear:both;">
+                                                <div class="review_form_content_title">
+                                                    한줄 리뷰
+                                                </div>
+                                                <div class="review_form_content_input">
+                                                    {{ review_form.review }}
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="review_btn submit">평가하기</button>
+                                            <button class="review_btn close" type="button">닫기</button>
+                                        </form>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
@@ -1217,10 +1308,6 @@
                     </div>
                 {% endif %}
 
-                <form id="product-upload-form" method="POST" enctype="multipart/form-data">{% csrf_token %}
-                    {{ review_form.as_p }}
-                    <input type="submit"/>
-                </form>
             </div>
         </div>
         {#                <div class="dashboard-info">#}
