--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -841,10 +841,10 @@
                                             </div>
                                             <div class="review_form_notice">
                                                 <span>
-                                                    평가 작성시 100포인트 적립
+                                                    평가 작성시 0.5% 포인트 적립
                                                 </span>
                                             </div>
-                                            <input type="hidden" name="product_id" value="{{ order_item.cart_item.item.id }}">
+                                            <input type="hidden" name="order_item_id" value="{{ order_item.id }}">
                                             <input type="hidden" name="is_review_upload" value="true"/>
                                             <div class="review_form_content product">
                                                 <div class="review_form_content_title">
@@ -868,7 +868,7 @@
                                                     {% endif %}
                                                     </div>
                                                     <div class="review_product_detail price">
-                                                        ￦ {{ order_item.line_item_total }}
+                                                        ￦ {{ order_item.cart_item.line_item_total }}
                                                     </div>
                                                 </div>
                                             </div>
@@ -878,26 +878,26 @@
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     <fieldset class="rating">
-                                                        <input type="radio" id="id_rating_10" name="rating" value="10" />
-                                                        <label class = "full" for="id_rating_10" title="Awesome - 5 stars"></label>
-                                                        <input type="radio" id="id_rating_9" name="rating" value="9" />
-                                                        <label class="half" for="id_rating_9" title="Pretty good - 4.5 stars"></label>
-                                                        <input type="radio" id="id_rating_8" name="rating" value="8" />
-                                                        <label class = "full" for="id_rating_8" title="Pretty good - 4 stars"></label>
-                                                        <input type="radio" id="id_rating_7" name="rating" value="7" />
-                                                        <label class="half" for="id_rating_7" title="Meh - 3.5 stars"></label>
-                                                        <input type="radio" id="id_rating_6" name="rating" value="6" />
-                                                        <label class = "full" for="id_rating_6" title="Meh - 3 stars"></label>
-                                                        <input type="radio" id="id_rating_5" name="rating" value="5" />
-                                                        <label class="half" for="id_rating_5" title="Kinda bad - 2.5 stars"></label>
-                                                        <input type="radio" id="id_rating_4" name="rating" value="4" />
-                                                        <label class = "full" for="id_rating_4" title="Kinda bad - 2 stars"></label>
-                                                        <input type="radio" id="id_rating_3" name="rating" value="3" />
-                                                        <label class="half" for="id_rating_3" title="Meh - 1.5 stars"></label>
-                                                        <input type="radio" id="id_rating_2" name="rating" value="2" />
-                                                        <label class = "full" for="id_rating_2" title="Sucks big time - 1 star"></label>
-                                                        <input type="radio" id="id_rating_1" name="rating" value="1" />
-                                                        <label class="half" for="id_rating_1" title="Sucks big time - 0.5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_10" name="rating" value="10" />
+                                                        <label class = "full" for="id_{{ order_item.id }}_rating_10" title="Awesome - 5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_9" name="rating" value="9" />
+                                                        <label class="half" for="id_{{ order_item.id }}_rating_9" title="Pretty good - 4.5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_8" name="rating" value="8" />
+                                                        <label class = "full" for="id_{{ order_item.id }}_rating_8" title="Pretty good - 4 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_7" name="rating" value="7" />
+                                                        <label class="half" for="id_{{ order_item.id }}_rating_7" title="Meh - 3.5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_6" name="rating" value="6" />
+                                                        <label class = "full" for="id_{{ order_item.id }}_rating_6" title="Meh - 3 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_5" name="rating" value="5" />
+                                                        <label class="half" for="id_{{ order_item.id }}_rating_5" title="Kinda bad - 2.5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_4" name="rating" value="4" />
+                                                        <label class = "full" for="id_{{ order_item.id }}_rating_4" title="Kinda bad - 2 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_3" name="rating" value="3" />
+                                                        <label class="half" for="id_{{ order_item.id }}_rating_3" title="Meh - 1.5 stars"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_2" name="rating" value="2" />
+                                                        <label class = "full" for="id_{{ order_item.id }}_rating_2" title="Sucks big time - 1 star"></label>
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_1" name="rating" value="1" />
+                                                        <label class="half" for="id_{{ order_item.id }}_rating_1" title="Sucks big time - 0.5 stars"></label>
                                                     </fieldset>
                                                     <div class="rating_notice">별을 클릭하여 서비스 만족도를 알려주세요.</div>
                                                 </div>
